--- a/springboot work/ex05/src/main/resources/application.properties
+++ b/springboot work/ex05/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3308/lsy
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
