--- a/springboot work/ex08_auditing/src/main/resources/application.properties
+++ b/springboot work/ex08_auditing/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:mariadb://192.168.0.29:3306/lsy
 spring.datasource.username=root
 spring.datasource.password=1234
 
+# create \uC0C8\uB85C \uC0DD\uC131, none \uC544\uBB34\uAC83\uB3C4 \uD558\uC9C0 \uC54A\uC74C, update \uC218\uC815\uB41C \uBD80\uBD84\uB9CC \uD14C\uC774\uBE14 \uC218\uC815 (\uB370\uC774\uD130 \uC0AC\uB77C\uC9D0)
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
