--- a/springboot work/ex10/src/main/resources/application.yml
+++ b/springboot work/ex10/src/main/resources/application.yml
@@ -1,13 +1,14 @@
-server:
-  port: 8080
-
 spring:
   application:
     name: ex10
 
+  sql:
+    init:
+      mode: always
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://127.0.0.1:3306/lsy
+    url: jdbc:mariadb://localhost:3306/lsy
     username: root
     password: 1234
 
@@ -18,6 +19,16 @@ spring:
       hibernate.format_sql: true
     show-sql: true
     open-in-view: false
+    #스프링 부트 시작 후 data.sql 인서트 구문 실행해라
+    defer-datasource-initialization: true
+
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+      file-size-threshold: 0
 
 my:
   value: "welcome to my value"
+
+
