--- a/springboot work/ex10/src/main/resources/application.yml
+++ b/springboot work/ex10/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate.format_sql: true
     show-sql: true
