--- a/springboot work/ex10/src/main/resources/application.yml
+++ b/springboot work/ex10/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+  port: 8080
   application:
     name: ex10
 
@@ -8,7 +9,7 @@ spring:
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/lsy
+    url: jdbc:mariadb://maria_container:3306/lsy
     username: root
     password: 1234
 
