--- a/springboot work/todo-kakao/src/main/resources/application.yml
+++ b/springboot work/todo-kakao/src/main/resources/application.yml
@@ -3,24 +3,29 @@ server:
 spring:
   application:
     name: todo-kakao
+
     ## data.sql ????
   sql:
     init:
       mode: always
+
     ## vscode ?? ???...
   output:
     ansi:
       enabled: always
+
     ## DB ??
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/lsy?serverTimezone=Asia/Seoul
     username: root
     password: 1234
+
     ## jpa create
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+
       ## sql ???
     properties:
       hibernate.format_sql: false
@@ -34,6 +39,7 @@ spring:
       max-request-size: 100MB
       file-size-threshold: 0
       enabled: true
+
 ## jwt ?? ??? ???? ????..
   jwt:
     secret: abcdefghijklmnopqrstuvwxyz01234567890asfdasdf
