--- a/msa_work/userservice/build.gradle
+++ b/msa_work/userservice/build.gradle
@@ -53,6 +53,10 @@ dependencies {
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
 
 	implementation 'org.jsoup:jsoup:1.15.4'
 }
