--- a/msa_work/k8s/maria/maria-secret.yaml
+++ b/msa_work/k8s/maria/maria-secret.yaml
@@ -1,14 +1,14 @@
----
 apiVersion: v1
 kind: Secret
 metadata:
   name: mariadb-secret
+  namespace: maria-name
 data:
-  password: MTIzNA== # base64로 인코딩 된 pw 1234 값 입력
+  password: MTIzNA== # base64로 인코딩 된 pw 값 입력
 ---
 apiVersion: v1
 kind: Secret
 metadata:
   name: jwt-secret
 data:
-  password: YWJjZGVmZ2hpamtsbW5vcDEyMzQ1Njc4 # base64로 인코딩 된 pw abcdefghijklmnop12345678 값 입력
+  password: YWJjZGVmZ2hpamtsbW5vcDEyMzQ1Njc4 # base64로 인코딩 된 pw 값 입력
