--- a/msa_work/k8s/maria/maria.yaml
+++ b/msa_work/k8s/maria/maria.yaml
@@ -1,7 +1,13 @@
+#apiVersion: v1
+#kind: Namespace
+#metadata:
+#  name: maria-name
+---
 apiVersion: apps/v1
 kind: Deployment # pod 여러개
 metadata:
   name: mariadb-deployment
+#  namespace: maria-name
 spec: # 어떻게 만들지에 대한 내용
   replicas: 1 # pod 몇 개 만들래
   selector:
@@ -37,6 +43,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mariadb
+#  namespace: maria-name
 spec:
   type: LoadBalancer
   ports:
