--- a/msa_work/orderservice/build.gradle
+++ b/msa_work/orderservice/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
+	//kafka
+	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 dependencyManagement {
