--- a/msa_work/k8s/kafka/docker-compose.yml
+++ b/msa_work/k8s/kafka/docker-compose.yml
@@ -14,12 +14,14 @@ services:
       - zookeeper
     ports:
       - 9092:9092
+      - 9093:9093
+      - 9094:9094
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST1:PLAINTEXT,PLAINTEXT_HOST2:PLAINTEXT,PLAINTEXT_HOST3:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST1://localhost:9092,PLAINTEXT_HOST2://192.168.0.68:9093,PLAINTEXT_HOST3://192.168.65.3:9094
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
@@ -40,6 +42,22 @@ services:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:2181
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://broker:29092
+      KAFKA_OPTS: "-Dfile.encoding=UTF-8"
+
+  kafdrop:
+    image: obsidiandynamics/kafdrop  # 최신 Schema Registry 버전
+    container_name: kafdrop
+    depends_on:
+      - zookeeper
+      - broker
+      - kafka-connect
+      - schema-registry
+    ports:
+      - 9000:9000
+    environment:
+      KAFKA_BROKERCONNECT: broker:29092
+      JVM_OPTS: "-Xms32M -Xmx64M"
+      SERVER_SERVLET_CONTEXTPATH: "/"
       KAFKA_OPTS: "-Dfile.encoding=UTF-8"
 
   kafka-connect:
