--- a/msa_work/k8s/services/catalog.yaml
+++ b/msa_work/k8s/services/catalog.yaml
@@ -3,7 +3,7 @@ kind: Deployment # pod 여러개
 metadata:
   name: catalog-service-deployment
 spec: # 어떻게 만들지에 대한 내용
-  replicas: 1 # pod 몇 개 만들래
+  replicas: 1 # 몇개의 pod 만들래?
   selector:
     matchLabels:
       app: catalog-service # 쿠버네티스 안에서 변수명
@@ -14,9 +14,9 @@ spec: # 어떻게 만들지에 대한 내용
     spec: # pod 하나하나에 대한 내용
       containers:
         - name: catalog-service
-          image: seungyongi/catalog-service:msa.k8.01 # dockerhub에 있는 image
+          image: seungyongi/catalog-service:msa.k8.03 # dockerhub 에 있는 image
           ports:
-            - containerPort: 40005
+            - containerPort: 40005 #default
           env:
             - name: SPRING_DATASOURCE_URL
               valueFrom:
@@ -33,13 +33,17 @@ spec: # 어떻게 만들지에 대한 내용
                 configMapKeyRef:
                   name: msa-k8s-configmap
                   key: catalog-service-port
-            - name: USER_SERVICE_URL
-              value: user-service:40003
+            - name: FIRST_SERVICE_URL
+              value: first-service:40001
             - name: ORDER_SERVICE_URL
               value: order-service:40004
+            - name: SPRING_KAFKA_BOOTSTRAP_SERVERS
+              valueFrom:
+                configMapKeyRef:
+                  name: msa-k8s-configmap
+                  key: spring-kafka-bootstrap-servers
 
---- # 환경을 두 개 지정할 때 쓰는 구분자
-
+---
 apiVersion: v1
 kind: Service
 metadata:
