--- a/msa_work/catalogservice/src/main/resources/application.yml
+++ b/msa_work/catalogservice/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: order-service
+    name: catalog-service
   datasource:
     username: root
     password: 1234
