--- a/msa_work/k8s/services/order.yaml
+++ b/msa_work/k8s/services/order.yaml
@@ -2,8 +2,8 @@ apiVersion: apps/v1
 kind: Deployment # pod 여러개
 metadata:
   name: order-service-deployment
-spec: # 어떻게 만들지에 대한 내용
-  replicas: 1 # pod 몇 개 만들래
+spec: # 어떻게 만들지 대한 내용
+  replicas: 1 # 몇개의 pod 만들래?
   selector:
     matchLabels:
       app: order-service # 쿠버네티스 안에서 변수명
@@ -14,9 +14,11 @@ spec: # 어떻게 만들지에 대한 내용
     spec: # pod 하나하나에 대한 내용
       containers:
         - name: order-service
-          image: seungyongi/order-service:msa.k8.01 # dockerhub에 있는 image
+          image: seungyongi/order-service:msa.k8.02  # dockerhub 에 있는 image
+          #          imagePullPolicy: Always # 매번 이미지를 가져오도록 설정
+
           ports:
-            - containerPort: 40004
+            - containerPort: 40004 #default one
           env:
             - name: SPRING_DATASOURCE_URL
               valueFrom:
@@ -33,14 +35,22 @@ spec: # 어떻게 만들지에 대한 내용
                 configMapKeyRef:
                   name: msa-k8s-configmap
                   key: order-service-port
-            - name: USER_SERVICE_URL
-              value: user-service:40003
-            - name: CATALOG_SERVICE_URL
-              value: catalog-service:40005
+            - name: MANAGEMENT_ZIPKIN_TRACING_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  name: msa-k8s-configmap
+                  key: management-zipkin-tracing-endpoint
+            - name: FIRST_SERVICE_URL
+              value: first-service:40001
+            - name: ORDER_SERVICE_URL
+              value: order-service:40004
+            - name: SPRING_KAFKA_BOOTSTRAP_SERVERS
+              valueFrom:
+                configMapKeyRef:
+                  name: msa-k8s-configmap
+                  key: spring-kafka-bootstrap-servers
 
-
---- # 환경을 두 개 지정할 때 쓰는 구분자
-
+---
 apiVersion: v1
 kind: Service
 metadata:
